[gd_scene load_steps=3 format=3 uid="uid://room_layout_preview"]

[ext_resource type="Script" path="res://scripts/room_layout_generator.gd" id="1_generator"]
[ext_resource type="Script" path="res://scripts/layout_preview_ui.gd" id="2_ui"]

[node name="RoomLayoutPreview" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 50, 50)
projection = 1
size = 100.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 20, 0)
light_energy = 0.5
shadow_enabled = true

[node name="RoomLayout" type="Node3D" parent="."]
script = ExtResource("1_generator")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_ui")

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Room Layout Generator"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RegenerateButton" type="Button" parent="UI/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Regenerate Layout"

[node name="BackButton" type="Button" parent="UI/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back to Menu"

[node name="InfoLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tree-based room layout. Blue tiles = rooms, Green spheres = connected doors, Yellow = unused doors"
horizontal_alignment = 1

[connection signal="pressed" from="UI/Panel/VBoxContainer/HBoxContainer/RegenerateButton" to="UI" method="_on_regenerate_button_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/HBoxContainer/BackButton" to="UI" method="_on_back_button_pressed"]
